--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,13 +11,7 @@ on:
         - master
       paths: 
         - terraform/**
-env:
-    # credentials for deployment to AWS
-    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    # S3 bucket for the terraform state. 
-    BUCKET_TF_STATE: ${{ secrets.BUCKET_TF }}
-    AWS_REGION: us-east-1
+
 
 jobs:
     terraform:
@@ -36,7 +30,7 @@ jobs:
 
         - name: Terraform Init
           id: init
-          run: terraform init -backend-config "bucket=$BUCKET_TF_STATE"
+          run: terraform init -backend-config "bucket=$BUCKET_TF"
 
         - name: Terraform Format
           id: fmt
