--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,7 +35,7 @@ jobs:
       run: aws sts get-caller-identity
 
     - name: Check S3 Bucket Access
-      run: aws s3 ls s3://$BUCKET_TF_STATE
+      run: aws s3 ls s3://$BUCKET_TF
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
