--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,71 +1,67 @@
 name: Cloudcore IAC
 
 on:
-  push:
-    branches: 
-      - master
-    paths: 
-      - terraform/**
-  pull_request:
-    branches: 
-      - master
-    paths: 
-      - terraform/**
+    push:
+      branches: 
+        - master
+      paths: 
+        - terraform/**
+    pull_request:
+      branches: 
+        - master
+      paths: 
+        - terraform/**
+env:
+    # credentials for deployment to AWS
+    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    # S3 bucket for the terraform state. 
+    BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE }}
+    AWS_REGION: us-east-1
 
 jobs:
-  terraform:
-    name: "Apply Terraform Code Changes"
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./terraform
+    terraform:
+        name: "Apply terraform code changes"
+        runs-on: ubuntu-latest
+        defaults:
+            run:
+                shell: bash
+                working-directory: ./terraform
+        steps:
+        - name: Checkout source code 
+          uses: actions/checkout@v4
 
-    steps:
-    - name: Checkout Source Code 
-      uses: actions/checkout@v4
+        - name: Setup Terraform with specified version on the runner
+          uses: hashicorp/setup-terraform@v3
 
-    - name: Set AWS Credentials
-      run: |
-        echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-        echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
-        echo "BUCKET_TF_STATE=${{ secrets.BUCKET_TF }}" >> $GITHUB_ENV
+        - name: Terraform Init
+          id: init
+          run: terraform init -backend-config "bucket=$BUCKET_TF_STATE"
 
-    - name: Debug AWS Credentials
-      run: aws sts get-caller-identity
+        - name: Terraform Format
+          id: fmt
+          run: terraform fmt -check
+          continue-on-error: true 
 
-    - name: Check S3 Bucket Access
-      run: aws s3 ls s3://$BUCKET_TF
+        - name: Terraform Validate
+          id: validate
+          run: terraform validate
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
+        - name: Terraform Plan
+          id: plan
+          run: terraform plan -no-color -input=false -out planfile
+          continue-on-error: true 
 
-    - name: Terraform Init
-      id: init
-      run: terraform init -backend-config="bucket=$BUCKET_TF_STATE" -backend-config="region=us-east-1"
+        - name: Terraform Plan Status 
+          if: steps.plan.outcome == 'failure'
+          run: exit 1
 
-    - name: Terraform Format
-      id: fmt
-      run: terraform fmt -check
-      continue-on-error: true 
+        - name: Terraform Apply
+          id: apply
+          if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+          run: terraform apply -auto-approve -input=false -parallelism=1 planfile
 
-    - name: Terraform Validate
-      id: validate
-      run: terraform validate
 
-    - name: Terraform Plan
-      id: plan
-      run: |
-        terraform plan -no-color -input=false -out planfile || exit 1
-      continue-on-error: true 
 
-    - name: Terraform Apply
-      id: apply
-      if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      run: |
-        if [ -f planfile ]; then
-          terraform apply -auto-approve -input=false -parallelism=1 planfile
-        else
-          echo "Terraform planfile missing, skipping apply"
-          exit 1
-        fi
+
+        
